updated buttons and remove unnecessary

--- a/popup.html
+++ b/popup.html
@@ -147,8 +147,8 @@
                 <div class="form-group">
                     <label for="buttonIndex">Button to Click:</label>
                     <select id="buttonIndex" name="buttonIndex">
-                        <option value="0">First Button</option>
-                        <option value="1">Second Button</option>
+                        <option value="0">Clock IN</option>
+                        <option value="1">Clock OUT</option>
                     </select>
                 </div>
                 
